; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_sfb.c_sfb_fclists_clean.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_sfb.c_sfb_fclists_clean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfb = type { i32 }
%struct.sfb_fcl = type { i32 }

@SFB_BINS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sfb*)* @sfb_fclists_clean to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sfb_fclists_clean(%struct.sfb* %0) #0 {
  %2 = alloca %struct.sfb*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.sfb_fcl*, align 8
  store %struct.sfb* %0, %struct.sfb** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %22, %1
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @SFB_BINS, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %25

9:                                                ; preds = %5
  %10 = load %struct.sfb*, %struct.sfb** %2, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call %struct.sfb_fcl* @SFB_FC_LIST(%struct.sfb* %10, i32 %11)
  store %struct.sfb_fcl* %12, %struct.sfb_fcl** %4, align 8
  %13 = load %struct.sfb_fcl*, %struct.sfb_fcl** %4, align 8
  %14 = getelementptr inbounds %struct.sfb_fcl, %struct.sfb_fcl* %13, i32 0, i32 0
  %15 = call i32 @STAILQ_EMPTY(i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %9
  %18 = load %struct.sfb*, %struct.sfb** %2, align 8
  %19 = load %struct.sfb_fcl*, %struct.sfb_fcl** %4, align 8
  %20 = call i32 @sfb_fclist_append(%struct.sfb* %18, %struct.sfb_fcl* %19)
  br label %21

21:                                               ; preds = %17, %9
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %5

25:                                               ; preds = %5
  ret void
}

declare dso_local %struct.sfb_fcl* @SFB_FC_LIST(%struct.sfb*, i32) #1

declare dso_local i32 @STAILQ_EMPTY(i32*) #1

declare dso_local i32 @sfb_fclist_append(%struct.sfb*, %struct.sfb_fcl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
